# docs/swagger.json
@@ -678,12 +678,12 @@
                 ],
                 "parameters": [
                     {
-                        "description": "info needed to upload",
+                        "description": "info needed to update",
                         "name": "param_request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v2.EditParams"
+                            "$ref": "#/definitions/v2.UpdateParams"
                         }
                     }
                 ],
@@ -2576,6 +2576,19 @@
                 "item_id": {
                     "type": "string",
                     "example": "1010"
+                }
+            }
+        },
+        "v2.UpdateParams": {
+            "type": "object",
+            "properties": {
+                "ipfs_url": {
+                    "type": "string",
+                    "example": "http://ipfs/xmaedhkdhfrfndj"
+                },
+                "token_id": {
+                    "type": "string",
+                    "example": "1001"
                 }
             }
         },
